crates/svelte-parser/tests/snapshots/snapshots__use_directive_paren_args_nested.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
<div use:tooltip(getText('hello')) class="box"></div>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 53,
                    },
                    name: "div",
                    attributes: [
                        Directive(
                            Directive {
                                span: Span {
                                    start: 5,
                                    end: 34,
                                },
                                kind: Use,
                                name: "tooltip(getText('hello'))",
                                modifiers: [],
                                expression: None,
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                        Normal(
                            NormalAttribute {
                                span: Span {
                                    start: 35,
                                    end: 46,
                                },
                                name: "class",
                                value: Text(
                                    TextValue {
                                        span: Span {
                                            start: 42,
                                            end: 45,
                                        },
                                        value: "box",
                                    },
                                ),
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                    ],
                    children: [],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 53,
        },
    },
    span: Span {
        start: 0,
        end: 53,
    },
}
